tests/indexed-types/should_compile/T6152.hs
{-# LANGUAGE DataKinds, TypeFamilies, GADTs #-}

module T6152 where

data U = Unit

data SU (a :: U) where
   SInt :: SU Unit

type family I (a :: U) :: U
type instance I Unit = Unit

type SUI a = SU (I a)

